[gd_scene load_steps=2 format=3 uid="uid://b76vnt4rv4p0q"]

[ext_resource type="Script" path="res://addons/sprinkled_coding/dock.gd" id="1_rgqlm"]

[node name="Spr" type="Control" node_paths=PackedStringArray("explosion_checkbox", "blip_checkbox", "chars_checkbox", "sound_checkbox")]
custom_minimum_size = Vector2(100, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rgqlm")
explosion_checkbox = NodePath("VBoxContainer/GridContainer/explosionCheckbox")
blip_checkbox = NodePath("VBoxContainer/GridContainer/blipCheckbox")
chars_checkbox = NodePath("VBoxContainer/GridContainer/charsCheckbox")
sound_checkbox = NodePath("VBoxContainer/GridContainer/soundCheckbox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="explosionCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Explosions"

[node name="blipCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
text = "Blips"

[node name="charsCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
text = "Keys"

[node name="soundCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
text = "Sound"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="resetButton" type="Button" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Reset"
